--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -35,7 +35,7 @@ models:
   jaffle_shop:
     marts:
       core:
-        materialized: table
+        +materialized: table
     staging:
-      materialized: view  
+      +materialized: view  
 
